--- a/jee-example-app/pom.xml
+++ b/jee-example-app/pom.xml
@@ -1,3 +1,4 @@
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
@@ -8,29 +9,20 @@
 	</parent>
 	<artifactId>jee-example-app</artifactId>
 	<name>JEE Example App</name>
-	<packaging>ear</packaging>
+	<packaging>war</packaging>
 	<build>
 		<plugins>
 			<plugin>
-				<artifactId>maven-ear-plugin</artifactId>
-				<version>2.8</version>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>3.3.1</version>
 				<configuration>
-					<configuration>
-			          <packagingIncludes>**/migration-support-*.jar</packagingIncludes>
-			        </configuration>
-					<modules>
-						<webModule>
-							<groupId>org.windup.example</groupId>
-							<artifactId>jee-example-web</artifactId>
-							<bundleFileName>jee-example-web.war</bundleFileName>
-							<contextRoot>/jee-example-web</contextRoot>
-						</webModule>
-						<ejbModule>
-							<groupId>org.windup.example</groupId>
-							<artifactId>jee-example-services</artifactId>
-							<bundleFileName>jee-example-services.jar</bundleFileName>
-						</ejbModule>
-					</modules>
+					<warSourceDirectory>src/main/webapp</warSourceDirectory>
+					<webResources>
+						<resource>
+							<directory>src/main/resources</directory>
+						</resource>
+					</webResources>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -40,13 +32,24 @@
 			<groupId>org.windup.example</groupId>
 			<artifactId>jee-example-web</artifactId>
 			<version>1.0.0</version>
-			<type>war</type>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.windup.example</groupId>
 			<artifactId>jee-example-services</artifactId>
 			<version>1.0.0</version>
-			<type>ejb</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>5.3.13</version>
+		</dependency>
+		<dependency>
+			<groupId>javax</groupId>
+			<artifactId>javaee-api</artifactId>
+			<version>8.0</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 </project>
