--- a/jee-example-web/src/main/webapp/WEB-INF/web.xml
+++ b/jee-example-web/src/main/webapp/WEB-INF/web.xml
@@ -1,43 +1,44 @@
+
 <?xml version='1.0' encoding='UTF-8'?>
-<web-app xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="2.4">
-	<display-name>JEE Example Web</display-name>
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee" 
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee 
+         http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" 
+         version="3.1">
 
-	<filter>
-		<filter-name>AuthenticateFilter</filter-name>
-		<filter-class>com.acme.anvil.AuthenticateFilter</filter-class>
-	</filter>
+    <display-name>JEE Example Web</display-name>
 
-	<filter-mapping>
-		<filter-name>AuthenticateFilter</filter-name>
-		<filter-pattern>/*</filter-pattern>
-	</filter-mapping>
+    <filter>
+        <filter-name>AuthenticateFilter</filter-name>
+        <filter-class>com.acme.anvil.AuthenticateFilter</filter-class>
+    </filter>
 
+    <filter-mapping>
+        <filter-name>AuthenticateFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
-	<listener>
-		<listener-class></listener-class>
-	</listener>
+    <servlet>
+        <servlet-name>AnvilWebServlet</servlet-name>
+        <servlet-class>com.acme.anvil.AnvilWebServlet</servlet-class>
+        <load-on-startup>0</load-on-startup>
+    </servlet>
 
-	<servlet>
-		<servlet-name>AnvilWebServlet</servlet-name>
-		<servlet-class>com.acme.anvil.AnvilWebServlet</servlet-class>
-		<load-on-startup>0</load-on-startup>
-		<run-as>
-			<role-name>WebRunAsRole</role-name>
-		</run-as>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>AnvilWebServlet</servlet-name>
-		<url-pattern>/AnvilWebServlet</url-pattern>
-	</servlet-mapping>
-	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
-		<welcome-file>index.htm</welcome-file>
-		<welcome-file>index.jsp</welcome-file>
-		<welcome-file>default.html</welcome-file>
-		<welcome-file>default.htm</welcome-file>
-		<welcome-file>default.jsp</welcome-file>
-	</welcome-file-list>
-	<security-role>
-		<role-name>WebRunAsRole</role-name>
-	</security-role>
+    <servlet-mapping>
+        <servlet-name>AnvilWebServlet</servlet-name>
+        <url-pattern>/AnvilWebServlet</url-pattern>
+    </servlet-mapping>
+
+    <welcome-file-list>
+        <welcome-file>index.html</welcome-file>
+        <welcome-file>index.htm</welcome-file>
+        <welcome-file>index.jsp</welcome-file>
+        <welcome-file>default.html</welcome-file>
+        <welcome-file>default.htm</welcome-file>
+        <welcome-file>default.jsp</welcome-file>
+    </welcome-file-list>
+
+    <security-role>
+        <role-name>WebRunAsRole</role-name>
+    </security-role>
 </web-app>
