--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,4 @@
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.windup.example</groupId>
@@ -12,14 +13,14 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.6</version>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.17.1</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.ejb</groupId>
 			<artifactId>ejb-api</artifactId>
-			<version>3.0</version>
+			<version>3.2</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
@@ -43,5 +44,5 @@
 		<module>jee-example-web</module>
 		<module>jee-example-app</module>
 	</modules>
-	<description>Example EAR, WAR, EJB JAR that use Weblogic vendor specific APIs.  </description>
+	<description>Example Spring Boot application that uses standard Java EE APIs.</description>
 </project>
