Converted WebLogic Java files to Spring Boot with AI

--- a/jee-example-services/pom.xml
+++ b/jee-example-services/pom.xml
@@ -7,31 +7,25 @@
 		<relativePath>..</relativePath>
 	</parent>
 	<artifactId>jee-example-services</artifactId>
+	<packaging>jar</packaging>
+	<name>JEE Example Services</name>
 	<dependencies>
 		<dependency>
-			<groupId>org.migration.support</groupId>
-			<artifactId>migration-support</artifactId>
-			<version>1.0.0</version>
-			<scope>provided</scope>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.6</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>javax.ejb</groupId>
-			<artifactId>ejb-api</artifactId>
-			<version>3.0</version>
-			<scope>provided</scope>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.12.0</version>
 		</dependency>
 		<dependency>
-			<groupId>javaee</groupId>
-			<artifactId>javaee-api</artifactId>
-			<version>5</version>
-			<scope>provided</scope>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-logging</artifactId>
 		</dependency>
 	</dependencies>
-	<packaging>ejb</packaging>
-	<name>JEE Example EJB Services</name>
 </project>
