--- a/jee-example-app/pom.xml
+++ b/jee-example-app/pom.xml
@@ -1,3 +1,4 @@
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
@@ -8,45 +9,38 @@
 	</parent>
 	<artifactId>jee-example-app</artifactId>
 	<name>JEE Example App</name>
-	<packaging>ear</packaging>
+	<packaging>jar</packaging>
 	<build>
 		<plugins>
 			<plugin>
-				<artifactId>maven-ear-plugin</artifactId>
-				<version>2.8</version>
-				<configuration>
-					<configuration>
-			          <packagingIncludes>**/migration-support-*.jar</packagingIncludes>
-			        </configuration>
-					<modules>
-						<webModule>
-							<groupId>org.windup.example</groupId>
-							<artifactId>jee-example-web</artifactId>
-							<bundleFileName>jee-example-web.war</bundleFileName>
-							<contextRoot>/jee-example-web</contextRoot>
-						</webModule>
-						<ejbModule>
-							<groupId>org.windup.example</groupId>
-							<artifactId>jee-example-services</artifactId>
-							<bundleFileName>jee-example-services.jar</bundleFileName>
-						</ejbModule>
-					</modules>
-				</configuration>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
 	</build>
 	<dependencies>
 		<dependency>
-			<groupId>org.windup.example</groupId>
-			<artifactId>jee-example-web</artifactId>
-			<version>1.0.0</version>
-			<type>war</type>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.12.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.windup.example</groupId>
 			<artifactId>jee-example-services</artifactId>
 			<version>1.0.0</version>
-			<type>ejb</type>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 </project>
