--- a/jee-example-web/pom.xml
+++ b/jee-example-web/pom.xml
@@ -1,3 +1,4 @@
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
@@ -9,23 +10,24 @@
   <artifactId>jee-example-web</artifactId>
   <packaging>war</packaging>
   <dependencies>
-  	<dependency>
-  		<groupId>org.windup.example</groupId>
-  		<artifactId>jee-example-services</artifactId>
-  		<version>1.0.0</version>
-  		<scope>provided</scope>
-  	</dependency>
-  	<dependency>
-  		<groupId>javaee</groupId>
-  		<artifactId>javaee-api</artifactId>
-  		<version>5</version>
-  		<scope>provided</scope>
-  	</dependency>
-  	<dependency>
-  		<groupId>commons-lang</groupId>
-  		<artifactId>commons-lang</artifactId>
-  		<version>2.5</version>
-  	</dependency>
+    <dependency>
+      <groupId>org.windup.example</groupId>
+      <artifactId>jee-example-services</artifactId>
+      <version>1.0.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-jpa</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.12.0</version>
+    </dependency>
   </dependencies>
   <name>JEE Example Web Application</name>
 </project>
