--- a/jee-example-web/pom.xml
+++ b/jee-example-web/pom.xml
@@ -1,31 +1,71 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+Here is the converted `pom.xml` for the Spring Boot application, compatible with JDK 8 and using Apache Tomcat as the embedded servlet container. The WebLogic/ADF-specific dependencies and configurations have been removed, and appropriate Spring Boot starters have been added.
+
+### Converted `pom.xml`
+
+
+<project xmlns="http://maven.apache.org/POM/4.0.0" 
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  
   <parent>
-    <artifactId>jee-example</artifactId>
-    <groupId>org.windup.example</groupId>
-    <version>1.0.0</version>
-    <relativePath>..</relativePath>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>1.5.22.RELEASE</version> <!-- Latest 1.x version compatible with JDK 8 -->
+    <relativePath/> <!-- lookup parent from repository -->
   </parent>
+  
   <artifactId>jee-example-web</artifactId>
   <packaging>war</packaging>
+  
   <dependencies>
-  	<dependency>
-  		<groupId>org.windup.example</groupId>
-  		<artifactId>jee-example-services</artifactId>
-  		<version>1.0.0</version>
-  		<scope>provided</scope>
-  	</dependency>
-  	<dependency>
-  		<groupId>javaee</groupId>
-  		<artifactId>javaee-api</artifactId>
-  		<version>5</version>
-  		<scope>provided</scope>
-  	</dependency>
-  	<dependency>
-  		<groupId>commons-lang</groupId>
-  		<artifactId>commons-lang</artifactId>
-  		<version>2.5</version>
-  	</dependency>
+    <dependency>
+      <groupId>org.windup.example</groupId>
+      <artifactId>jee-example-services</artifactId>
+      <version>1.0.0</version>
+      <scope>provided</scope>
+    </dependency>
+    
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+    
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-jpa</artifactId>
+    </dependency>
+    
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.12.0</version> <!-- Updated to a newer version -->
+    </dependency>
+    
+    <!-- Add any other necessary dependencies here -->
   </dependencies>
+  
   <name>JEE Example Web Application</name>
+  
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+      </plugin>
+    </plugins>
+  </build>
 </project>
+
+
+### Key Changes Made:
+1. **Parent Block**: Added the `spring-boot-starter-parent` as the parent for dependency management.
+2. **Dependencies**: 
+   - Removed the `javaee-api` dependency and replaced it with `spring-boot-starter-web` and `spring-boot-starter-data-jpa`.
+   - Updated `commons-lang` to `commons-lang3` for compatibility and improvements.
+3. **Build Plugins**: Added the `spring-boot-maven-plugin` for building the Spring Boot application.
+
+### Next Steps:
+- Configure your `application.properties` or `application.yml` for database connections, JNDI resources, and other configurations as needed.
+- Implement any necessary Spring configurations for JMS, transaction management, etc.
+- Ensure that the application is tested thoroughly after migration to confirm that it behaves as expected.
