--- a/jee-example-web/src/main/webapp/WEB-INF/web.xml
+++ b/jee-example-web/src/main/webapp/WEB-INF/web.xml
@@ -1,43 +1,122 @@
-<?xml version='1.0' encoding='UTF-8'?>
-<web-app xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="2.4">
-	<display-name>JEE Example Web</display-name>
+To convert the provided legacy `web.xml` configuration into a Spring Boot-compatible format, we will replace the XML configuration with Java-based configuration using Spring annotations. Below is the converted configuration:
 
-	<filter>
-		<filter-name>AuthenticateFilter</filter-name>
-		<filter-class>com.acme.anvil.AuthenticateFilter</filter-class>
-	</filter>
+### Spring Boot Configuration
 
-	<filter-mapping>
-		<filter-name>AuthenticateFilter</filter-name>
-		<filter-pattern>/*</filter-pattern>
-	</filter-mapping>
+1. **Create a Spring Boot Application Class**: This will serve as the entry point for the application.
+
+java
+package com.acme.anvil;
+
+import org.springframework.boot.SpringApplication;
+import org.springframework.boot.autoconfigure.SpringBootApplication;
+
+@SpringBootApplication
+public class AnvilApplication {
+    public static void main(String[] args) {
+        SpringApplication.run(AnvilApplication.class, args);
+    }
+}
 
 
-	<listener>
-		<listener-class></listener-class>
-	</listener>
+2. **Filter Configuration**: Define the `AuthenticateFilter` as a Spring bean.
 
-	<servlet>
-		<servlet-name>AnvilWebServlet</servlet-name>
-		<servlet-class>com.acme.anvil.AnvilWebServlet</servlet-class>
-		<load-on-startup>0</load-on-startup>
-		<run-as>
-			<role-name>WebRunAsRole</role-name>
-		</run-as>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>AnvilWebServlet</servlet-name>
-		<url-pattern>/AnvilWebServlet</url-pattern>
-	</servlet-mapping>
-	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
-		<welcome-file>index.htm</welcome-file>
-		<welcome-file>index.jsp</welcome-file>
-		<welcome-file>default.html</welcome-file>
-		<welcome-file>default.htm</welcome-file>
-		<welcome-file>default.jsp</welcome-file>
-	</welcome-file-list>
-	<security-role>
-		<role-name>WebRunAsRole</role-name>
-	</security-role>
-</web-app>
+java
+package com.acme.anvil;
+
+import org.springframework.boot.web.servlet.FilterRegistrationBean;
+import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.Configuration;
+
+import javax.servlet.Filter;
+
+@Configuration
+public class FilterConfig {
+
+    @Bean
+    public FilterRegistrationBean<Filter> authenticateFilter() {
+        FilterRegistrationBean<Filter> registrationBean = new FilterRegistrationBean<>();
+        registrationBean.setFilter(new AuthenticateFilter());
+        registrationBean.addUrlPatterns("/*");
+        return registrationBean;
+    }
+}
+
+
+3. **Servlet Configuration**: Define the `AnvilWebServlet` as a Spring bean.
+
+java
+package com.acme.anvil;
+
+import org.springframework.boot.web.servlet.ServletRegistrationBean;
+import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.Configuration;
+
+import javax.servlet.Servlet;
+
+@Configuration
+public class ServletConfig {
+
+    @Bean
+    public ServletRegistrationBean<Servlet> anvilWebServlet() {
+        ServletRegistrationBean<Servlet> registrationBean = new ServletRegistrationBean<>(new AnvilWebServlet(), "/AnvilWebServlet");
+        registrationBean.setLoadOnStartup(0);
+        return registrationBean;
+    }
+}
+
+
+4. **Welcome File Configuration**: Spring Boot does not have a direct equivalent for welcome files in `web.xml`. However, you can achieve similar functionality by configuring a `Controller` to handle the root URL.
+
+java
+package com.acme.anvil;
+
+import org.springframework.stereotype.Controller;
+import org.springframework.web.bind.annotation.GetMapping;
+
+@Controller
+public class WelcomeController {
+
+    @GetMapping("/")
+    public String welcome() {
+        return "index"; // This should correspond to an index.html or index.jsp in your templates directory
+    }
+}
+
+
+5. **Security Role Configuration**: If you need to manage security roles, you can configure Spring Security. Below is a basic example of how to set up a security configuration.
+
+java
+package com.acme.anvil;
+
+import org.springframework.context.annotation.Configuration;
+import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter;
+
+@Configuration
+@EnableWebSecurity
+public class SecurityConfig extends WebSecurityConfigurerAdapter {
+
+    @Override
+    protected void configure(HttpSecurity http) throws Exception {
+        http.authorizeRequests()
+            .anyRequest().authenticated()
+            .and()
+            .formLogin(); // You can customize this as per your requirements
+    }
+}
+
+
+### Summary of Changes
+
+- Removed the `web.xml` file and replaced it with Java-based configuration using Spring annotations.
+- Defined filters and servlets as Spring beans.
+- Created a welcome controller to handle the root URL.
+- Added a basic security configuration to manage roles.
+
+### Additional Configuration
+
+- Ensure that you have the necessary dependencies in your `pom.xml` for Spring Boot, Spring Web, Spring Security, etc.
+- Configure your application properties in `src/main/resources/application.properties` or `application.yml` for database connections, server settings, etc.
+
+This configuration will allow your application to run in a Spring Boot environment with embedded Tomcat, effectively replacing the legacy WebLogic configuration.
