--- a/pom.xml
+++ b/pom.xml
@@ -1,47 +1,48 @@
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.windup.example</groupId>
-	<artifactId>jee-example</artifactId>
-	<version>1.0.0</version>
-	<name>JEE Example</name>
-	<dependencies>
-		<dependency>
-			<groupId>org.migration.support</groupId>
-			<artifactId>migration-support</artifactId>
-			<version>1.0.0</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.6</version>
-		</dependency>
-		<dependency>
-			<groupId>javax.ejb</groupId>
-			<artifactId>ejb-api</artifactId>
-			<version>3.0</version>
-			<scope>provided</scope>
-		</dependency>
-	</dependencies>
-	<packaging>pom</packaging>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.jboss.windup</groupId>
-				<artifactId>windup-maven-plugin</artifactId>
-				<configuration>
-					<packages>
-						<package>com.acme</package>
-					</packages>
-					<source>true</source>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
-	<modules>
-		<module>jee-example-services</module>
-		<module>jee-example-web</module>
-		<module>jee-example-app</module>
-	</modules>
-	<description>Example EAR, WAR, EJB JAR that use Weblogic vendor specific APIs.  </description>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>org.windup.example</groupId>
+    <artifactId>jee-example</artifactId>
+    <version>1.0.0</version>
+    <name>JEE Example</name>
+    <packaging>war</packaging>
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>1.5.22.RELEASE</version>
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.12.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.30</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-logging</artifactId>
+        </dependency>
+    </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
+    <description>Example Spring Boot application migrated from WebLogic vendor specific APIs.</description>
 </project>
