--- a/jee-example-web/src/main/webapp/WEB-INF/web.xml
+++ b/jee-example-web/src/main/webapp/WEB-INF/web.xml
@@ -1,43 +1,49 @@
-<?xml version='1.0' encoding='UTF-8'?>
-<web-app xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="2.4">
-	<display-name>JEE Example Web</display-name>
+java
+import org.springframework.boot.SpringApplication;
+import org.springframework.boot.autoconfigure.SpringBootApplication;
+import org.springframework.web.filter.DelegatingFilterProxy;
+import org.springframework.web.servlet.config.annotation.EnableWebMvc;
+import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
+import org.springframework.context.annotation.Bean;
+import org.springframework.web.servlet.config.annotation.ResourceHandlerRegistry;
+import org.springframework.web.servlet.config.annotation.ViewResolversRegistry;
+import org.springframework.web.servlet.config.annotation.WebMvcConfigurerAdapter;
 
-	<filter>
-		<filter-name>AuthenticateFilter</filter-name>
-		<filter-class>com.acme.anvil.AuthenticateFilter</filter-class>
-	</filter>
+@SpringBootApplication
+@EnableWebMvc
+public class Application implements WebMvcConfigurer {
 
-	<filter-mapping>
-		<filter-name>AuthenticateFilter</filter-name>
-		<filter-pattern>/*</filter-pattern>
-	</filter-mapping>
+    public static void main(String[] args) {
+        SpringApplication.run(Application.class, args);
+    }
 
+    @Bean
+    public DelegatingFilterProxy authenticateFilter() {
+        return new DelegatingFilterProxy("authenticateFilter");
+    }
 
-	<listener>
-		<listener-class></listener-class>
-	</listener>
+    @Bean
+    public FilterRegistrationBean<AuthenticateFilter> registerAuthenticateFilter() {
+        FilterRegistrationBean<AuthenticateFilter> registration = new FilterRegistrationBean<>();
+        registration.setFilter(new AuthenticateFilter());
+        registration.addUrlPatterns("/*");
+        return registration;
+    }
 
-	<servlet>
-		<servlet-name>AnvilWebServlet</servlet-name>
-		<servlet-class>com.acme.anvil.AnvilWebServlet</servlet-class>
-		<load-on-startup>0</load-on-startup>
-		<run-as>
-			<role-name>WebRunAsRole</role-name>
-		</run-as>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>AnvilWebServlet</servlet-name>
-		<url-pattern>/AnvilWebServlet</url-pattern>
-	</servlet-mapping>
-	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
-		<welcome-file>index.htm</welcome-file>
-		<welcome-file>index.jsp</welcome-file>
-		<welcome-file>default.html</welcome-file>
-		<welcome-file>default.htm</welcome-file>
-		<welcome-file>default.jsp</welcome-file>
-	</welcome-file-list>
-	<security-role>
-		<role-name>WebRunAsRole</role-name>
-	</security-role>
-</web-app>
+    @Bean
+    public ServletRegistrationBean<AnvilWebServlet> anvilWebServlet() {
+        ServletRegistrationBean<AnvilWebServlet> registration = new ServletRegistrationBean<>(new AnvilWebServlet(), "/AnvilWebServlet");
+        registration.setLoadOnStartup(0);
+        return registration;
+    }
+
+    @Override
+    public void addResourceHandlers(ResourceHandlerRegistry registry) {
+        registry.addResourceHandler("/**").addResourceLocations("classpath:/static/");
+    }
+
+    @Override
+    public void configureViewResolvers(ViewResolversRegistry registry) {
+        // Configure view resolvers if needed
+    }
+}
