--- a/jee-example-app/pom.xml
+++ b/jee-example-app/pom.xml
@@ -1,52 +1,45 @@
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<artifactId>jee-example</artifactId>
-		<groupId>org.windup.example</groupId>
-		<version>1.0.0</version>
-		<relativePath>..</relativePath>
-	</parent>
-	<artifactId>jee-example-app</artifactId>
-	<name>JEE Example App</name>
-	<packaging>ear</packaging>
-	<build>
-		<plugins>
-			<plugin>
-				<artifactId>maven-ear-plugin</artifactId>
-				<version>2.8</version>
-				<configuration>
-					<configuration>
-			          <packagingIncludes>**/migration-support-*.jar</packagingIncludes>
-			        </configuration>
-					<modules>
-						<webModule>
-							<groupId>org.windup.example</groupId>
-							<artifactId>jee-example-web</artifactId>
-							<bundleFileName>jee-example-web.war</bundleFileName>
-							<contextRoot>/jee-example-web</contextRoot>
-						</webModule>
-						<ejbModule>
-							<groupId>org.windup.example</groupId>
-							<artifactId>jee-example-services</artifactId>
-							<bundleFileName>jee-example-services.jar</bundleFileName>
-						</ejbModule>
-					</modules>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
-	<dependencies>
-		<dependency>
-			<groupId>org.windup.example</groupId>
-			<artifactId>jee-example-web</artifactId>
-			<version>1.0.0</version>
-			<type>war</type>
-		</dependency>
-		<dependency>
-			<groupId>org.windup.example</groupId>
-			<artifactId>jee-example-services</artifactId>
-			<version>1.0.0</version>
-			<type>ejb</type>
-		</dependency>
-	</dependencies>
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>1.5.22.RELEASE</version>
+        <relativePath/>
+    </parent>
+    <artifactId>jee-example-app</artifactId>
+    <name>JEE Example App</name>
+    <packaging>war</packaging>
+    <properties>
+        <java.version>1.8</java.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+    </dependencies>
 </project>
